[package]
name = "gunma"
version = "0.1.0"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.18"
ncollide2d = "0.19"
specs = "0.15"
specs-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
log = "0.4"
derive-new = "0.5"
shred = "0.9"
shred-derive = "0.6"
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
wsq = { path = "../wsq" }